--- a/site/views/addProduct.ejs
+++ b/site/views/addProduct.ejs
@@ -1,120 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/bootstrap-grid.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,600;0,700;1,200&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/4fa9f35e5d.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/addproduct.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/bootstrap-grid.min.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,600;0,700;1,200&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/4fa9f35e5d.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="/css/addproduct.css" />
     <title>Nuevo Producto</title>
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <link
+      href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css"
+      rel="stylesheet"
+      id="bootstrap-css"
+    />
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script>
+      $(document).ready(function () {
+        $(document).on("change", ".btn-file :file", function () {
+          var input = $(this),
+            label = input.val().replace(/\\/g, "/").replace(/.*\//, "");
+          input.trigger("fileselect", [label]);
+        });
 
-<script>
-    $(document).ready( function() {
-    $(document).on('change', '.btn-file :file', function() {
-    var input = $(this),
-        label = input.val().replace(/\\/g, '/').replace(/.*\//, '');
-    input.trigger('fileselect', [label]);
-    });
-
-    $('.btn-file :file').on('fileselect', function(event, label) {
-        
-        var input = $(this).parents('.input-group').find(':text'),
+        $(".btn-file :file").on("fileselect", function (event, label) {
+          var input = $(this).parents(".input-group").find(":text"),
             log = label;
-        
-        if( input.length ) {
-            input.val(log);
-        } else {
-            if( log ) alert(log);
-        }
-    
-    });
-    function readURL(input) {
-        if (input.files && input.files[0]) {
-            var reader = new FileReader();
-            
-            reader.onload = function (e) {
-                $('#img-upload').attr('src', e.target.result);
-            }
-            
-            reader.readAsDataURL(input.files[0]);
-        }
-    }
 
-    $("#imgInp").change(function(){
-        readURL(this);
-    }); 	
-});
-</script>
-</head>
-<body >
-    <header class="headerNewProduct" > 
-        <div class="logo"> 
-            <img src="../images/logo-elMercado.png" alt="logo-el-mercado">
-        </div>
-        <div class="user-nav">
-            <ul>
-                <li><a href="#"> <i class="far fa-user"></i> - User Menu - <i class="fas fa-angle-down"></i></a></li>
-                
-                <li><a href="#">Ayuda</a></li>
-            </ul>
-        </div>
+          if (input.length) {
+            input.val(log);
+          } else {
+            if (log) alert(log);
+          }
+        });
+        function readURL(input) {
+          if (input.files && input.files[0]) {
+            var reader = new FileReader();
+
+            reader.onload = function (e) {
+              $("#img-upload").attr("src", e.target.result);
+            };
+
+            reader.readAsDataURL(input.files[0]);
+          }
+        }
+
+        $("#imgPortada").change(function () {
+          readURL(this);
+        });
+      });
+    </script>
+    <script>
+      $(function () {
+        // Multiple images preview in browser
+        var imagesPreview = function (input, placeToInsertImagePreview) {
+          if (input.files) {
+            var filesAmount = input.files.length;
+
+            for (i = 0; i < filesAmount; i++) {
+              var reader = new FileReader();
+
+              reader.onload = function (event) {
+                $($.parseHTML("<img>"))
+                  .attr("src", event.target.result)
+                  .appendTo(placeToInsertImagePreview);
+              };
+
+              reader.readAsDataURL(input.files[i]);
+            }
+          }
+        };
+
+        $("#img-products").on("change", function () {
+          imagesPreview(this, "div.gallery");
+        });
+      });
+    </script>
+  </head>
+  <body>
+    <header class="headerNewProduct">
+      <div class="logo">
+        <img src="../images/logo-elMercado.png" alt="logo-el-mercado" />
+      </div>
+      <div class="user-nav">
+        <ul>
+          <li>
+            <a href="#">
+              <i class="far fa-user"></i> - User Menu -
+              <i class="fas fa-angle-down"></i
+            ></a>
+          </li>
+
+          <li><a href="#">Ayuda</a></li>
+        </ul>
+      </div>
     </header>
-    <section class="new-product col-14 ">
-        <div class="product-menu col-sm-1 col-md-1 col-lg-1 "> <p>Menu de productos</p></div>
-       
-        <div class="product-detail col-sm-10 col-md-5 col-lg-5">
-            <h2>NUEVO PRODUCTO</h2>
-            <p>Ingrese el detalle del producto que desea agregar</p>
-            <form action="/products/add" method="POST" class="detail" enctype="multipart/form-data">
-               
-                <input type="text" name="name" placeholder="Nombre del producto">
-                
-             
-             <select id = "category">
-               <option selected="true" disabled="disabled" >Selecciona la Categoria</option>
-               <option value = "1">Alimentos y Bebidas</option>
-               <option value = "2">Indumentaria</option>
-               <option value = "3">Servicios</option>
-               <option value = "4">Decoración</option>
-             </select>
-             <textarea name="description" id="" cols="30" rows="5" placeholder="Breve descripcion del producto" ></textarea>
-             <input type="number" name="price" placeholder="Precio del Producto">
-             <input type="text" name="discount" placeholder="Descuento">
-            
-             <label for="img" class="form-label">Cargar imagenes del producto:</label>
-			<input type="file" id="img" name="img" placeholder="Ingresa un avatar para tu perfil" class="file" multiple >
-           
-            <!-- image-preview-filename input [CUT FROM HERE]
-                         <div class="input-group">
-                            <span class="input-group-btn">
-                                <span class="btn btn-default btn-file">
-                                    Subir… <input type="file" id="imgInp" >
-                                </span>
-                            </span>
-                            <input type="text" class="form-control" readonly>
-                        </div>
-                        
-             <!-- /input-group image-preview [TO HERE]--> 
-            <button type="submit" class="btn-new">CREAR NUEVO PRODUCTO</button>
-            </form>
-           
-        </div> 
-       
-        <div class="product-images col-sm-11 col-md-5 col-lg-6 ">
-           
-            <h2>Imagenes del producto</h2>
-            <p>Vista previa de las imagenes del producto</p>
-            <img id='img-upload'/>
-            
+    <section class="container new-product col-12">
+      <div class="product-detail col-sm-10 col-md-10 col-lg-10">
+        <h2>NUEVO PRODUCTO</h2>
+        <p>Ingrese el detalle del producto que desea agregar</p>
+        <form
+          id="newProduct"
+          action="/products/add"
+          method="POST"
+          class="detail"
+          enctype="multipart/form-data"
+        >
+          <input type="text" name="name" placeholder="Nombre del producto" />
+
+          <select id="category">
+            <option selected="true" disabled="disabled"
+              >Selecciona la Categoria</option
+            >
+            <option value="1">Alimentos y Bebidas</option>
+            <option value="2">Tecnologia</option>
+            <option value="3">Indumentaria</option>
+            <option value="4">Servicios</option>
+            <option value="5">Entrenimiento</option>
+          </select>
+          <textarea
+            name="description"
+            id=""
+            cols="30"
+            rows="5"
+            placeholder="Breve descripcion del producto"
+          ></textarea>
+          <input type="number" name="price" placeholder="Precio del Producto" />
+          <input type="text" name="discount" placeholder="Descuento" />
+
+          <div class="container col-12">
+            <div class="form-group col-12">
+              <div class="input-group-local col-6">
+                <label>Subir Portada:</label>
+                <input type="file" id="imgPortada" />
+              </div>
+              <div class="input-group-local col-6">
+                <label>Galeria de fotos</label>
+
+                <input
+                  type="file"
+                  name="img-products"
+                  placeholder="Puede cargar hasta 8 fotos"
+                  multiple
+                  id="img-products"
+                />
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+
+      <div class="product-images col-sm-10 col-md-10 col-lg-10">
+        <div class="caja-galeria">
+          <h2>Imagenes del producto</h2>
+          <p>Vista previa de las imagenes del producto</p>
+          <h3>Portada del producto:</h3>
+          <div class="portada"><img id="img-upload" /></div>
+
+          <h3>Galeria de fotos:</h3>
+          <div class="gallery"></div>
         </div>
-       
+      </div>
+      <div class="btn-crear col-sm-11 col-md-12 col-lg-12">
+        <button type="submit" form="newProduct" class="btn-new">
+          CREAR NUEVO PRODUCTO
+        </button>
+      </div>
     </section>
-    
-    
-            
-</body>
+  </body>
 </html>
