--- a/site/public/css/addproduct.css
+++ b/site/public/css/addproduct.css
@@ -1,209 +1,260 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-  body {
-    background-color: #effbff;
-    font-family: "Montserrat", sans-serif;
-  }
-  .headerNewProduct {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-  }
-  header {
-    position: fixed;
-    height: 120px;
-    background-color: #567ee4;
-    z-index: 99;
-  }
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body {
+  background-color: #effbff;
+  font-family: "Montserrat", sans-serif;
+}
+.headerNewProduct {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+header {
+  position: fixed;
+  height: 120px;
+  background-color: #567ee4;
+  z-index: 99;
+}
+
+.logo {
+  padding: 10px;
+  margin-left: 20px;
+  position: relative;
+  width: 120px;
+}
+.user-nav {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+i.far.fa-user {
+  padding-left: 10px;
+}
+.user-nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.user-nav ul li {
+  width: 180px;
+  padding: 0px 5px;
+}
+.user-nav ul li a {
+  display: inline-block;
+  width: 100%;
+  text-decoration: none;
+  color: #fff;
+}
+
+.logo img {
+  width: 100%;
+}
+
+.new-product {
+  z-index: 1;
+  position: relative;
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
   
-  .logo {
-    padding: 10px;
-    margin-left: 20px;
-    position: relative;
-    width: 120px;
-  }
-  .user-nav {
-    display: flex;
-    flex-wrap: wrap;
-  }
+}
+
+
+.product-menu {
   
-  i.far.fa-user {
-    padding-left: 10px;
-  }
-  .user-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-  }
+  color: #fff;
+  padding-top: 20px;
+  position: fixed;
+  font-size: 12px;
   
-  .user-nav ul li {
-    width: 180px;
-    padding: 0px 5px;
-  }
-  .user-nav ul li a {
-    display: inline-block;
-    width: 100%;
-    text-decoration: none;
-    color: #fff;
-  }
-  
-  .logo img {
-    width: 100%;
-  }
-  
-  .new-product {
-    z-index: 1;
-    position: relative;
-    justify-content: center;
-    display: flex;
-    flex-wrap: wrap;
-    
-  }
+  background-color: #4667b9;
+  height: auto;
+  position: relative;
+  margin: 20px;
+}
+
+.product-images {
+  position: relative;
  
+  background-color: rgb(232, 232, 232);
+  border-radius: 5px;
   
-  .product-menu {
-    
-    color: #fff;
-    padding-top: 20px;
-    position: fixed;
-    font-size: 12px;
-    
-    background-color: #4667b9;
-    height: auto;
-    position: relative;
-  }
+}
+.product-images h2 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
   
-  .product-images {
-    position: relative;
-    
-    background-color: darkgray;
-    
-  }
-  .product-images h2 {
+  color: #23386d;
+}
+.product-images p {
+  color: #4667b9;
+  font-style: italic;
+  margin-top: 2px;
+}
+
+.product-detail {
+  
+  
+  padding-bottom: 40px;
+}
+
+.product-detail h2 {
+  color: #23386d;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+}
+.product-detail p {
+  color: r#4667b9;
+  font-style: italic;
+  margin-top: 2px;
+}
+.btn-new-product {
+  margin-top: 5px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 5px;
+}
+.btn-new {
+  margin: 0 auto;
+  width: 250px;
+  padding: 20px;
+  color: #fff;
+  font-size: 1em;
+  background: #567ee4;
+  border: 1px solid #114bdf;
+  box-sizing: border-box;
+  border-radius: 10px;
+}
+
+.btn-new a {
+  text-decoration: none;
+  color: #fff;
+}
+form.detail {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  margin-top: 20px;
+
+}
+.detail input {
     font-family: "Montserrat", sans-serif;
-    font-weight: 600;
-    
-    color: #fff;
-  }
-  .product-images p {
-    color: azure;
-    font-style: italic;
-    margin-top: 2px;
-  }
-  
-  .product-detail {
-    
-    background-color: #2ca2ca;
-    padding-bottom: 40px;
-  }
-  
-  .product-detail h2 {
-    color: #fff;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 600;
-  }
-  .product-detail p {
-    color: azure;
-    font-style: italic;
-    margin-top: 2px;
-  }
-  .btn-new-product {
-    margin-top: 5px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-bottom: 5px;
-  }
-  .btn-new {
-    margin: 0 auto;
-    width: 250px;
-    padding: 20px;
-    color: #fff;
-    font-size: 1em;
-    background: #567ee4;
-    border: 1px solid #114bdf;
-    box-sizing: border-box;
-    border-radius: 10px;
-  }
-  
-  .btn-new a {
-    text-decoration: none;
-    color: #fff;
-  }
-  form.detail {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    margin-top: 20px;
-  
-  }
-  .detail input {
-      font-family: "Montserrat", sans-serif;
-    font-size: 14px;
-    box-sizing: border-box;
-    padding: 10px 20px;
-    margin-bottom: 10px;
-    background: #f6f6f6;
-    border-radius: 6px;
-    border: 2px solid #114bdf69;
-  }
-  .detail select {
-      font-family: "Montserrat", sans-serif;
-    font-size: 14px;
-    margin-top: 10px;
-    padding: 20px;
-    border-radius: 6px;
-    border: 2px solid #114bdf69;
-  }
-  .detail select option {
-      font-family: "Montserrat", sans-serif;
-    font-size: 14px;
-    margin-top: 10px;
-    padding: 20px;
-    border-radius: 6px;
-    border: 2px solid #114bdf69;
-  }
-  
-  .detail textarea {
-      font-family: "Montserrat", sans-serif;
-    font-size: 14px;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    padding: 10px;
-    border-radius: 6px;
-    border: 2px solid #114bdf69;
-  }
-.input-group{
+  font-size: 14px;
+  box-sizing: border-box;
+  padding: 10px 20px;
   margin-bottom: 10px;
+  background: #f6f6f6;
+  border-radius: 6px;
+  border: 2px solid #114bdf69;
+  width: 100%;
+}
+.detail select {
+    font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  margin-top: 10px;
+  padding: 20px;
+  border-radius: 6px;
+  border: 2px solid #114bdf69;
+}
+.detail select option {
+    font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  margin-top: 10px;
+  padding: 20px;
+  border-radius: 6px;
+  border: 2px solid #114bdf69;
+}
+
+.detail textarea {
+    font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  padding: 10px;
+  border-radius: 6px;
+  border: 2px solid #114bdf69;
+}
+
+.form-group{
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  
+  
+}
+
+.form-group label{
+  width: 200px;
+}
+
+
+.input-group-local{
+  display: flex;
+  align-items: center;
+  position: relative;
+  border-collapse: separate;
+margin-bottom: 10px;
 }
 
 .btn-file {
-  position: relative;
-  overflow: hidden;
+position: relative;
+overflow: hidden;
 }
 .btn-file input[type=file] {
-  position: absolute;
-  top: 0;
-  right: 0;
-  min-width: 100%;
-  min-height: 100%;
-  font-size: 100px;
-  text-align: right;
-  filter: alpha(opacity=0);
-  opacity: 0;
-  outline: none;
-  background: white;
-  cursor: inherit;
-  display: block;
+position: absolute;
+top: 0;
+right: 0;
+
+min-width: 100%;
+min-height: 100%;
+font-size: 100px;
+text-align: right;
+filter: alpha(opacity=0);
+opacity: 0;
+outline: none;
+background: white;
+cursor: inherit;
+display: block;
 }
 
-#img-upload{
-  width: 50%;
+.portada img{
+  width: 450px;
+  height: 300px;
+}
+
+.caja-galeria{
+display: flex;
+flex-wrap: nowrap;
+flex-direction: column;
+justify-content: center;
+}
+
+.gallery{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.gallery img{
+width: 250px;
+  border: #4667b9 solid 1px;
   padding: 5px;
+  margin: 15px;
+  height: 180px;
+
+}
+
+.btn-crear{
+margin-top: 20px;
+margin-bottom: 50px;
+display: flex;
+justify-content: center;
 }
