Se paso de myApp -  25/04

--- a/site/views/partials/header.ejs
+++ b/site/views/partials/header.ejs
@@ -32,7 +32,7 @@
       <label for="btn-menu"><i class="fas fa-bars"></i></label>
      <nav class="menu">
            <ul>
-              <li><a href='#'>Comprar</a></li>
+              <li><a href='/products'>Comprar</a></li>
               <li><a href='#'>Vender</a></li>
               <li><a href='#'>Mapa</a></li>
               <li><a href='#'>Favoritos</a></li>
