Registro de Usuario // Imagen de producto guarda en carpeta x id

--- a/site/views/addProduct.ejs
+++ b/site/views/addProduct.ejs
@@ -139,7 +139,7 @@
             <div class="form-group col-12">
               <div class="input-group-local col-6">
                 <label>Subir Portada:</label>
-                <input type="file" id="imgPortada" />
+                <input type="file" name="imgPortada" id="imgPortada" />
               </div>
               <div class="input-group-local col-6">
                 <label>Galeria de fotos</label>
