Depuracion Base de datos productos - se eliminaron registros de prueba

--- a/site/views/addProduct.ejs
+++ b/site/views/addProduct.ejs
@@ -116,14 +116,10 @@
           <input type="text" name="name" placeholder="Nombre del producto" />
 
           <select id="category">
-            <option selected="true" disabled="disabled"
-              >Selecciona la Categoria</option
-            >
-            <option value="1">Alimentos y Bebidas</option>
-            <option value="2">Tecnologia</option>
-            <option value="3">Indumentaria</option>
-            <option value="4">Servicios</option>
-            <option value="5">Entrenimiento</option>
+            <option selected="true" disabled="disabled">Selecciona la Categoria</option>
+            <option value="in-sale">Ofertas</option>
+            <option value="visited">Ultimos Vistos</option>
+            
           </select>
           <textarea
             name="description"
