Se mejoro el controlador del registro de usuarios

--- a/site/views/register.ejs
+++ b/site/views/register.ejs
@@ -37,8 +37,8 @@
         <input type="password" id="password_repeat" name="password_repeat" placeholder="Ingresa nuevamente tu contraseña" class="form-input">
         <select  name="category" id="category">
           <option  value="">Selecciona la Categoria</option>
-          <option value = "1">Individuo</option>
-          <option value = "2">Empresa</option>
+          <option value = "individuo">Individuo</option>
+          <option value = "empresa">Empresa</option>
                  
         </select>
         <input type="file" id="avatar" name="avatar" placeholder="Ingresa un avatar para tu perfil" class="file" >
