to do edit products

--- a/site/views/editproduct.ejs
+++ b/site/views/editproduct.ejs
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- Redirect, cambiar del home para el detalle de productos
+    Ajustar estilos:
+        - Mobile format: títulos arriba de inputs
+        - Wide: dos columnas para foto y botones izquierda y datos a la derecha
+    Cambiar la ruta para buscar y guardar las imagenes
+    configurar la edición de files con multer -->
 <head>
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
