--- a/site/views/index.ejs
+++ b/site/views/index.ejs
@@ -106,7 +106,7 @@
         %>
             <div class="col-12 col-sm-6 col-lg-3">
                 <section class="product-box">
-                    <a href="/detalleProductos/<%= product.id %>">
+                    <a href="/products/<%= product.id %>">
                         <figure class="product-box_image">
                             <img src="/images/<%= product.image %>" alt="imagen de producto">
                         </figure>
@@ -138,7 +138,7 @@
         %>
             <div class="col-12 col-sm-6 col-lg-3">
                 <section class="product-box">
-                    <a href="/detalleProductos/<%= product.id %>">
+                    <a href="/products/<%= product.id %>">
                         <figure class="product-box_image">
                             <img src="/images/<%= product.image %>"alt="imagen de producto">
                         </figure>
