--- a/site/views/login.ejs
+++ b/site/views/login.ejs
@@ -28,8 +28,9 @@
               log in with Google
             </a>
           </div>
+          <class class="form-box">
           <% if (typeof errors != "undefined" ) { %>
-            <p>Hay errores</p>
+           
             <ul>
                 <% errors.forEach(function(elemento){ %>
                   <li>
@@ -38,10 +39,11 @@
                 <% }) %>
             </ul>
           <% } %>
-          <div class="form-box">
+          
         <form action="/login" class="lb-form" method="POST">
         <input type="text" name="email" placeholder="Ingresá tu Correo">
         <input type="password" name="password" placeholder="Ingresá tu contraseña">
+        <input type="checkbox" name="recordame"> <!-- acomodar el botón de recordame -->
         <button class="btn-registro"> <a href="#"> INGRESAR </a></button>
 
         </form>
