--- a/site/views/register.ejs
+++ b/site/views/register.ejs
@@ -29,6 +29,16 @@
             </a>
           </div>
           <div class="form-box">
+            <% if (typeof errors != "undefined" ) { %>
+           
+              <ul>
+                  <% errors.forEach(function(elemento){ %>
+                    <li>
+                      <%= elemento.msg %>
+                    </li>
+                  <% }) %>
+              </ul>
+            <% } %>
         <form action="/register" class="lb-form" method="POST" enctype="multipart/form-data">
         <input type="text" name="firstName" placeholder="Ingresá tu nombre">
         <input type="text" name="lastName" placeholder="Ingresá tu apellido">
