link login en navbar

--- a/site/views/partials/header.ejs
+++ b/site/views/partials/header.ejs
@@ -1,8 +1,8 @@
-<header class='cabecera'> 
+<header class='cabecera'>
 
     <div class="cabecera1">
         <a href="/">
-        <svg class="logo" viewBox="0 0 125 119" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="logo" viewBox="0 0 125 119" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0)">
             <path d="M44.1174 44.7826C46.3204 44.637 48.4422 45.3478 50.0982 46.7939L59.2103 54.7488C60.2456 55.6509 61.7776 55.6201 62.7744 54.6744L70.6783 47.1732C72.314 45.6219 74.4614 44.824 76.7146 44.9218C78.9721 45.0206 81.0373 46.0066 82.5276 47.6949L93.0469 59.6108V33.3054C93.0469 30.9159 91.6558 28.7431 89.4732 27.7433C88.7018 27.3905 87.8129 27.0069 86.8172 26.6074C84.518 17.3563 77.0597 -4.136 58.1377 0.699435C58.1377 0.699435 78.7926 0.0321898 81.6355 26.7105C82.0308 30.9244 81.7285 34.0248 81.7285 34.0248L77.7264 33.1323C77.6783 30.3007 77.1153 26.1463 76.6997 23.4444C68.7413 21.6052 58.3834 20.6755 46.7755 23.1958C51.8524 4.07288 63.9561 5.94287 63.9561 5.94287C45.8514 -2.39775 40.4112 32.8634 40.4112 32.8634H40.5052C40.47 33.1216 40.4368 33.3734 40.4112 33.6125L36.3567 34.1321C36.3567 34.1321 36.2403 30.4346 37.4272 25.9221C35.9048 26.4853 34.3674 27.1089 32.8182 27.8049C30.6014 28.8026 29.1633 30.9881 29.1633 33.4074V58.2583L38.4657 47.5833C39.9112 45.9269 41.9187 44.9313 44.1174 44.7826Z" fill="white"/>
             <path d="M92.9689 67.9334L78.3364 51.3541C77.8577 50.8122 77.1953 50.4956 76.471 50.4648C75.7413 50.4308 75.0554 50.689 74.5319 51.1884L66.627 58.6896C63.5233 61.6338 58.7541 61.7316 55.533 58.9191L46.4208 50.9642C45.8887 50.5009 45.206 50.2693 44.5009 50.3192C43.7936 50.3671 43.1483 50.6858 42.6836 51.2192L29.1665 66.7327V67.7729C29.1665 74.591 34.7231 80.117 41.58 80.117H80.6355C87.4582 80.117 92.9892 74.643 93.0436 67.8707L92.9689 67.9334Z" fill="#1C1C1C"/>
@@ -18,27 +18,27 @@
     </div>
 
     <div class="cabecera2">
-            <form action="" method="GET">
-                <input type="search" name="buscador" placeholder="Ingrese su búsqueda">
-            </form>
-     </div>
+        <form action="" method="GET">
+            <input type="search" name="buscador" placeholder="Ingrese su búsqueda">
+        </form>
+    </div>
 
-     <div class="icono1">
+    <div class="icono1">
         <a class="iconos" href="notificaciones"><i class="fas fa-bell"></i></a>
-     </div>
+    </div>
 
     <div class="menuMF">
-      <input type="checkbox" id='btn-menu'>
-      <label for="btn-menu"><i class="fas fa-bars"></i></label>
-     <nav class="menu">
-           <ul>
-              <li><a href='/products'>Comprar</a></li>
-              <li><a href='#'>Vender</a></li>
-              <li><a href='#'>Mapa</a></li>
-              <li><a href='#'>Favoritos</a></li>
-              <li><a href='#'>Login</a></li>
-          </ul>
-      </nav>
+        <input type="checkbox" id='btn-menu'>
+        <label for="btn-menu"><i class="fas fa-bars"></i></label>
+        <nav class="menu">
+            <ul>
+                <li><a href='/products'>Comprar</a></li>
+                <li><a href='#'>Vender</a></li>
+                <li><a href='#'>Mapa</a></li>
+                <li><a href='#'>Favoritos</a></li>
+                <li><a href='/login'>Login</a></li>
+            </ul>
+        </nav>
     </div>
 
     <div class="icono2">
