--- a/site/views/partials/header-navbar.ejs
+++ b/site/views/partials/header-navbar.ejs
@@ -17,7 +17,7 @@
             <li><a href='#'>Vender</a></li>
             <li><a href='#'>Mapa</a></li>
             <li><a href='#'>Favoritos</a></li>
-            <li><a href='#'>Login</a></li>
+            <li><a href='/login'>Login</a></li>
         </ul>
     </nav>
 </div>
