--- a/site/views/register.ejs
+++ b/site/views/register.ejs
@@ -42,19 +42,19 @@
               <% } %>
             </div>
            
-        <form action="/register" class="lb-form" method="POST" enctype="multipart/form-data">
+        <form action="/register" class="lb-form" method="POST" enctype="multipart/form-data" >
         <input type="text" name="firstName" placeholder="Ingresá tu nombre">
         <input type="text" name="lastName" placeholder="Ingresá tu apellido">
         <input type="email" name="email" placeholder="Ingresá tu correo">
         <input type="password" name="password" placeholder="Ingresá una contraseña">
-        <input type="password" id="password_repeat" name="password_repeat" placeholder="Ingresa nuevamente tu contraseña" class="form-input">
+        <input type="password" name="password_repeat" placeholder="Ingresa nuevamente tu contraseña">
         <select  name="category" id="category">
           <option  value="">Selecciona la Categoria</option>
           <option value = "individuo">Individuo</option>
           <option value = "empresa">Empresa</option>
                  
         </select>
-        <input type="file" id="avatar" name="avatar" placeholder="Ingresa un avatar para tu perfil" class="file" >
+        <input type="file"  id="avatar" name="avatar" placeholder="Ingresa un avatar para tu perfil" class="file" >
         <button type="submit" class="btn-registro">  REGISTRARME </button>
         
         </form>
