Correccion ruta Crear producto -antes: /products/add - ahora:/products/create

--- a/site/views/addProduct.ejs
+++ b/site/views/addProduct.ejs
@@ -85,9 +85,11 @@
     </script>
   </head>
   <body>
+
+   
     <header class="headerNewProduct">
       <div class="logo">
-        <img src="../images/logo-elMercado.png" alt="logo-el-mercado" />
+        <a href="/"><img src="../images/logo-elMercado.png" alt="logo-el-mercado" /></a>
       </div>
       <div class="user-nav">
         <ul>
