--- a/site/views/partials/header-navbar.ejs
+++ b/site/views/partials/header-navbar.ejs
@@ -14,7 +14,7 @@
     <nav class="menu">
         <ul>
             <li><a href='/products'>Comprar</a></li>
-            <li><a href='#'>Vender</a></li>
+            <li><a href='/products/create'>Vender</a></li>
             <li><a href='#'>Mapa</a></li>
             <li><a href='#'>Favoritos</a></li>
             <li><a href='/login'>Login</a></li>
