modificacion link de submit en LOGIN

--- a/site/views/login.ejs
+++ b/site/views/login.ejs
@@ -44,7 +44,7 @@
         <input type="text" name="email" placeholder="Ingresá tu Correo">
         <input type="password" name="password" placeholder="Ingresá tu contraseña">
         <input type="checkbox" name="recordame"> <!-- acomodar el botón de recordame -->
-        <button class="btn-registro"> <a href="#"> INGRESAR </a></button>
+        <button class="btn-registro"> <a href="/check"> INGRESAR </a></button>
 
         </form>
     </div>
