--- a/site/views/profile.ejs
+++ b/site/views/profile.ejs
@@ -2,22 +2,27 @@
     </head>
 
     <!-- pendientes:
-        - eliminar campos password
-        - incorporar imagen profile
-        - dividir página en dos segmentos 
         - agregar botón para editar profile, cambiar de usuario o checkout.
     -->
 
     <body>
         <%- include('partials/header-logo.ejs')%>
             <%- include('partials/header-navbar.ejs')%>
-                <div class="container">
-                    <% for (let userItem in user) { %>
-                        <div class="input-group-prepend mt-2">
-                            <label class="input-group-text text-left text-capitalize col-md-4"><%= `${userItem}:` %></label>
-                            <input name="<%= userItem %>" type="text" readonly class="input-group form-control col-8" placeholder="<%= `${user[userItem]}` %>">
-                        </div>
-                        <% } %>
+                <div class="container form-inline">
+                    <div class="col-12 col-md-6 mt-2">
+                        <img src="/images/users/<%=user.id%>/<%=user.avatar%>" class="rounded mx-auto img-fluid d-block img-thumbnail col-md-8 float-md-left" alt="No Image">
+                        <!-- <input type="file" id="imageEdit" class="form-control-file mb-3" data-default-file="" data-height="500"> -->
+                    </div>
+                    <div>
+                        <% for (let userItem in user) { %>
+                            <% if(!userItem.includes('password')){ %>
+                                <div class="input-group-prepend mt-2">
+                                    <label class="input-group-text text-left text-capitalize col-4"><%= `${userItem}:` %></label>
+                                    <input name="<%= userItem %>" type="text" readonly class="input-group form-control col-10" placeholder="<%= `${user[userItem]}` %>">
+                                </div>
+                                <% } %>
+                                    <% } %>
+                    </div>
                 </div>
 
                 <body>
