--- a/site/views/addProduct.ejs
+++ b/site/views/addProduct.ejs
@@ -1,110 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/bootstrap-grid.min.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,600;0,700;1,200&display=swap"
-      rel="stylesheet"
-    />
-    <script
-      src="https://kit.fontawesome.com/4fa9f35e5d.js"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="/css/addproduct.css" />
-    <title>Nuevo Producto</title>
-    <link
-      href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css"
-      rel="stylesheet"
-      id="bootstrap-css"
-    />
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script>
-      $(document).ready(function () {
-        $(document).on("change", ".btn-file :file", function () {
-          var input = $(this),
-            label = input.val().replace(/\\/g, "/").replace(/.*\//, "");
-          input.trigger("fileselect", [label]);
-        });
-
-        $(".btn-file :file").on("fileselect", function (event, label) {
-          var input = $(this).parents(".input-group").find(":text"),
-            log = label;
-
-          if (input.length) {
-            input.val(log);
-          } else {
-            if (log) alert(log);
-          }
-        });
-        function readURL(input) {
-          if (input.files && input.files[0]) {
-            var reader = new FileReader();
-
-            reader.onload = function (e) {
-              $("#img-upload").attr("src", e.target.result);
-            };
-
-            reader.readAsDataURL(input.files[0]);
-          }
-        }
-
-        $("#imgPortada").change(function () {
-          readURL(this);
-        });
-      });
-    </script>
-    <script>
-      $(function () {
-        // Multiple images preview in browser
-        var imagesPreview = function (input, placeToInsertImagePreview) {
-          if (input.files) {
-            var filesAmount = input.files.length;
-
-            for (i = 0; i < filesAmount; i++) {
-              var reader = new FileReader();
-
-              reader.onload = function (event) {
-                $($.parseHTML("<img>"))
-                  .attr("src", event.target.result)
-                  .appendTo(placeToInsertImagePreview);
-              };
-
-              reader.readAsDataURL(input.files[i]);
-            }
-          }
-        };
-
-        $("#img-products").on("change", function () {
-          imagesPreview(this, "div.gallery");
-        });
-      });
-    </script>
+    <%- include('partials/addProductHead.ejs')%>
   </head>
+  
   <body>
 
-   
-    <header class="headerNewProduct">
-      <div class="logo">
-        <a href="/"><img src="../images/logo-elMercado.png" alt="logo-el-mercado" /></a>
-      </div>
-      <div class="user-nav">
-        <ul>
-          <li>
-            <a href="#">
-              <i class="far fa-user"></i> - User Menu -
-              <i class="fas fa-angle-down"></i
-            ></a>
-          </li>
+    <%- include('partials/header.ejs')%>
 
-          <li><a href="#">Ayuda</a></li>
-        </ul>
-      </div>
-    </header>
-    <section class="container new-product col-12">
+    
+    
+    <section class="new-product col-12">
       <div class="product-detail col-sm-10 col-md-10 col-lg-10">
         <h2>NUEVO PRODUCTO</h2>
         <p>Ingrese el detalle del producto que desea agregar</p>
