--- a/site/views/detalleProductos.ejs
+++ b/site/views/detalleProductos.ejs
@@ -2,19 +2,21 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    
+    
+   
     <link rel="stylesheet" href="/css/styleProductoMF.css">
-    <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
+  
+    <%- include('partials/head.ejs')%>
     <title>Home</title>
 </head>
 
 <body>
+    <%- include('partials/header.ejs')%>
     <div>
         <!-- Contenedor ppal -->
         <!-- ENCABEZADO -->
-        <%- include('partials/header.ejs')%>
+       
             <!-- ENCABEZADO -->
 
             <main class="contenedor">
