--- a/site/views/partials/head.ejs
+++ b/site/views/partials/head.ejs
@@ -1,16 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
+<title>El Mercado| Conectando Personas</title>
+	<meta charset="UTF-8">
+	<meta name="description" content=" El Mercado| Conectando Personas">
+	<meta name="keywords" content="ElMercado, eCommerce, digitalHouse, html">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Favicon -->
+	<link href="images/img/favicon.ico" rel="shortcut icon"/>
 
-<head>
-    <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>
-        <%= title %>
-    </title>
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/header.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+	<!-- Google Font -->
+	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,300i,400,400i,700,700i" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,600;0,700;1,200&display=swap" rel="stylesheet"/>
+
+
+	<!-- Stylesheets -->
+	<link rel="stylesheet" href="/css/cart/bootstrap.min.css"/>
+	<link rel="stylesheet" href="/css/cart/font-awesome.min.css"/>
+	<link rel="stylesheet" href="/css/cart/flaticon.css"/>
+	<link rel="stylesheet" href="/css/cart/slicknav.min.css"/>
+	<link rel="stylesheet" href="/css/cart/jquery-ui.min.css"/>
+	<link rel="stylesheet" href="/css/cart/owl.carousel.min.css"/>
+	<link rel="stylesheet" href="/css/cart/animate.css"/>
+	<link rel="stylesheet" href="/css/cart/style.css"/>
+
+
+	<!--[if lt IE 9]>
+		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
