--- a/site/public/css/app.css
+++ b/site/public/css/app.css
@@ -9,7 +9,8 @@
   --gray: #666666;
   --light-gray: #ebebeb;
   --green: #39b54a;
-  --base-font-family: 'Roboto', sans-serif
+  --base-font-family: 'Montserrat', sans-serif
+  
 }
 
 /* Basics */
