--- a/site/views/blog.ejs
+++ b/site/views/blog.ejs
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html>
 <head>
 
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/blog.css">
 	<!-- Head section -->
-	<%- include('partial/head.ejs')%>
+	<%- include('partials/head.ejs')%>
     <!-- Head section end -->
  </head>
 <body>
@@ -18,7 +14,7 @@
 	</div>
 
     <!-- Header section -->
-    <%- include('partial/header.ejs')%>
+    <%- include('partials/header.ejs')%>
     <!-- Header section end -->
     
 
@@ -148,19 +144,11 @@ poco de SQL y aprovechar todas las prestaciones de un buen ORM.<br><br>
 
 
 	<!-- Footer section -->
-	<%- include('partial/footer.ejs')%>
+	<%- include('partials/footer.ejs')%>
 	<!-- Footer section end -->
 
 
 
-	<!--====== Javascripts & Jquery ======-->
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery.slicknav.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<script src="js/jquery.nicescroll.min.js"></script>
-	<script src="js/jquery.zoom.min.js"></script>
-	<script src="js/jquery-ui.min.js"></script>
-	<script src="js/main.js"></script>
+	
 </body>
 </html>
