--- a/site/views/partials/head.ejs
+++ b/site/views/partials/head.ejs
@@ -2,7 +2,15 @@
 	<meta charset="UTF-8">
 	<meta name="description" content=" El Mercado| Conectando Personas">
 	<meta name="keywords" content="ElMercado, eCommerce, digitalHouse, html">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+     <!-- CDN -->
+    
+     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+     
 	<!-- Favicon -->
 	<link href="images/img/favicon.ico" rel="shortcut icon"/>
 
@@ -19,7 +27,10 @@
 	<link rel="stylesheet" href="/css/cart/jquery-ui.min.css"/>
 	<link rel="stylesheet" href="/css/cart/owl.carousel.min.css"/>
 	<link rel="stylesheet" href="/css/cart/animate.css"/>
-	<link rel="stylesheet" href="/css/cart/style.css"/>
+    <link rel="stylesheet" href="/css/cart/style.css"/>
+
+
+   
 
 
 	<!--[if lt IE 9]>
