--- a/site/public/css/styleProductoMF.css
+++ b/site/public/css/styleProductoMF.css
@@ -1,7 +1,7 @@
 /* MAIN */
 .contenedor{
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
+    font-family: "Montserrat", sans-serif;
+	display: flex;
     display: grid;
     grid-template-rows:  55% 20% 30%;
     grid-template-columns: 100%;
